--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -15,8 +15,8 @@ html {
 
 body {
   min-height: 100vh;
-  background-color: v.$black;
-  color: v.$White;
+  // background-color: v.$black;
+  // color: v.$White;
 }
 
 p {
@@ -48,6 +48,11 @@ h1 {
   margin-block-end: 1.25rem;
   letter-spacing: -2px;
   font-size: clamp(2.5rem, 1.9886rem + 2.7273vw, 4.375rem);
+}
+
+h2 {
+  font-weight: v.$fw7;
+  font-size: 2.5rem;
 }
 
 button {
