--- a/src/assets/css/_mixin.scss
+++ b/src/assets/css/_mixin.scss
@@ -15,15 +15,22 @@
     border-radius: v.$br1;
     box-shadow: 5px 7px $bsColor;
     border: 1px solid v.$black;
+
     font: {
         weight: v.$fw5;
     }
 
     transition: all .5s ease-in-out;
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         background-color: $hColor;
         color: $htColor;
         box-shadow: 3px 3px $bhColor;
     }
+}
+
+@mixin boxShadow($bsColor) {
+    box-shadow: 5px 7px $bsColor;
+    border: 1px solid v.$black;
 }
