--- a/src/assets/css/_nav.scss
+++ b/src/assets/css/_nav.scss
@@ -18,26 +18,26 @@ nav {
         }
 
         a {
-            color: #ffffffb6;
+            color: black;
             transition: color .3s ease-in-out;
             position: relative;
     
             &:hover {
-                color: v.$White;
+                color: v.$primary-400;
             }
     
     
         }
     
         a.router-link-exact-active:not(:last-child) {
-            color: v.$White;
+            color: v.$primary-500;
     
             &::before {
                 content: '';
                 position: absolute;
                 bottom: -10px;
                 left: 50%;
-                background-color: v.$White;
+                background-color: v.$primary-500;
                 height: 2px;
                 width: 30px;
                 transform: translateX(-50%);
