--- a/src/assets/css/_mixin.scss
+++ b/src/assets/css/_mixin.scss
@@ -40,5 +40,5 @@
     color: v.$primary-500;
     display: flex;
     align-items: center;
-    // justify-content: center;
+    justify-content: center;
 }
