Complete all adjustments

--- a/src/assets/css/_nav.scss
+++ b/src/assets/css/_nav.scss
@@ -61,7 +61,7 @@ nav {
 
         .links {
             flex-direction: column;
-            background-color: v.$primary-500;
+            background-color: rgba(0, 0, 0, 0.97);
             padding: 20px;
             position: absolute;
             top: 80px;
